Fixes extra space above Navigation and below footer

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,6 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: 100vh;
 	color: #6d213c;
 }
 
