--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,5 +10,5 @@ a {
 #my-footer {
 	/* background-color: rgba(31, 31, 31, 0.1); */
 	padding: 1% 2%;
-	background-color: rgba(248, 239, 184, 1);
+	/* background-color: rgba(248, 239, 184, 1); */
 }
